--- a/oasis_dashboard/oasisdash/policy/templates/oasispolicy/index.html
+++ b/oasis_dashboard/oasisdash/policy/templates/oasispolicy/index.html
@@ -7,7 +7,8 @@
 {% endblock page_header %}
 
 {% block main %}
-Policy panel
+  {% include 'oasisdash/oasispolicy/policy.html' %}
 {% endblock %}
+
 
 
