--- a/oasis_dashboard/oasisdash/function/templates/function/index.html
+++ b/oasis_dashboard/oasisdash/function/templates/function/index.html
@@ -2,11 +2,12 @@
 {% load i18n %}
 {% block title %}{% trans "Function" %}{% endblock %}
 
-{% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Function") %}
-{% endblock page_header %}
-
 {% block main %}
+  <div class="row">
+     <div class="col-sm-12">
+     {{ tab_group.render }}
+     </div>
+  </div>
 {% endblock %}
 
 
