Function - angularjs 연동중

--- a/oasis_dashboard/oasisdash/function/templates/function/develop.html
+++ b/oasis_dashboard/oasisdash/function/templates/function/develop.html
@@ -1,6 +1,5 @@
 
+{% load i18n %}
 {% block main %}
-    {% include 'oasisdash/function/_function_form.html' %}
+    {% include 'oasisdash/function/_develop.html' %}
 {% endblock %}
-
-
