--- a/oasis_dashboard/oasisdash/function/templates/function/monitor.html
+++ b/oasis_dashboard/oasisdash/function/templates/function/monitor.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-    Monitor
-</body>
-</html>
+{% load i18n %}
+Monitor
+{{"STATIC_URL"}}
