--- a/oasis_dashboard/oasisdash/function/templates/function/_develop.html
+++ b/oasis_dashboard/oasisdash/function/templates/function/_develop.html
@@ -2,7 +2,7 @@
 
 {% block main %}
 
-<div id="editor" name="content" style="width:600px; height:500px">{{'STATIC_URL'}}
+<div id="editor" name="content" style="width:600px; height:500px">
 </div>
 
 <div class="field-filter">
