--- a/oasis_dashboard/oasisdash/function/templates/function/integration.html
+++ b/oasis_dashboard/oasisdash/function/templates/function/integration.html
@@ -1,5 +1,13 @@
 {% load i18n %}
+
+{% block page_header %}
+  <hz-page-header header="{$ 'Functions' | translate $}"/>
+{% endblock page_header %}
+
+{% block ng_route_base %}
+  <base href="{{ WEBROOT }}">
+{% endblock %}
+
 {% block main %}
-{{"'STATIC_URL'"}}
-    <ng-include src="'{{ STATIC_URL }}oasisdash/oasis/function/_integration.htm'"></ng-include>
+    <ng-include src="'{{ STATIC_URL }}oasisdash/oasis/function/_integration.html'"></ng-include>
 {% endblock %}
