Add angular-ui & angular-ui-tab

--- a/oasis_dashboard/oasisdash/function/templates/function/detail.html
+++ b/oasis_dashboard/oasisdash/function/templates/function/detail.html
@@ -14,5 +14,6 @@
 {% endblock %}
 
 {% block main %}
-  <ng-include src="'{{ STATIC_URL }}oasisdash/oasis/function/table/table.html'"></ng-include>
+  <div ui-view></div>
+  <!--<ng-include src="'{{ STATIC_URL }}oasisdash/oasis/function/table/table.html'"></ng-include>-->
 {% endblock %}
