--- a/oasis_dashboard/oasisdash/nodepool/templates/nodepool/index.html
+++ b/oasis_dashboard/oasisdash/nodepool/templates/nodepool/index.html
@@ -1,13 +1,11 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% trans "NodePool" %}{% endblock %}
-
-{% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("NodePool") %}
-{% endblock page_header %}
+{% block title %}{% trans "Node Pool" %}{% endblock %}
 
 {% block main %}
-  {% include 'oasisdash/nodepool/_nodepool.html' %}
+<div class="row">
+  <div class="col-sm-12">
+    {{ tab_group.render }}
+  </div>
+</div>
 {% endblock %}
-
-
